--- a/Assignment-2/code/my-app/src/App.css
+++ b/Assignment-2/code/my-app/src/App.css
@@ -36,3 +36,59 @@
     transform: rotate(360deg);
   }
 }
+.App {
+  text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+#root{
+  display: flex;
+  justify-content: center;
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+.container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  flex-direction: column;
+  align-items: flex-start;
+  max-width: 30%;
+
+
+}
+.profile-image{
+  height: 250px;
+  width: 250px;
+
+.App-link {
+  color: #61dafb;
+}
+.profile-image img{
+  height: 100%;
+  width: 100%;
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+h1{
+  color: aqua;
+}
