--- a/Assignment-4/code/src/Postview.css
+++ b/Assignment-4/code/src/Postview.css
@@ -9,3 +9,69 @@ body {
   color: black;
   margin:0;
 } 
+.logo{
+  width:3rem;
+  height: 3rem;
+  position:absolute;
+  left: 20%;
+  top:1.4rem;
+}
+.Camera-icon{
+  width: 2.5rem;
+  height: 2.5rem;
+  position: absolute;
+  right: 20%;
+  top: 1.1rem;
+}
+.post-container{
+  border: 1px solid rgb(233, 225, 225);
+  margin-left: 35%;
+  margin-top: 5vh;
+  width: 60vh;
+  height:70vh;
+  margin-bottom:10px ;
+  position: relative;
+}
+.name-details{
+  display: flex;
+  flex-direction: column;
+}
+#threedot{
+  width: 20px;
+  height: 20px;
+  float: right;
+
+}
+.container-post-details{
+  margin:5px ;
+  display: flex;
+  justify-content: space-between;
+
+
+}
+.like-share-button{
+  left: 70%;
+}
+.post-container-img{
+  margin-top:5px ;
+}
+#share{
+  width:1.1rem;
+  height: 1.1rem;
+  position:absolute;
+  margin-left: 30px;
+  margin-top:5px ;
+
+}
+.date-post{
+  margin-left:75% ;
+}
+#like{
+  width:1.5rem;
+  height: 1.5rem;
+  position:absolute;
+}
+.post-container-third{
+  margin:5px;
+} 
+
